@startuml reconciliation_schema

!define LIGHTBLUE #E1F5FE
!define LIGHTGREEN #E8F5E8
!define LIGHTYELLOW #FFF9C4
!define LIGHTPINK #FCE4EC

title Rapprochement bancaire

class ReleveParser LIGHTBLUE {
    +parse() : ParserResult
}

class ParserResult LIGHTYELLOW {
    ' Structure contenant les éléments identifiés
    ' dans le relevé de compte
}

class Reconciliator LIGHTGREEN {
    -parserResult : ParserResult
    -statementOperations : StatementOperation[]
    --
    +Reconciliator(parserResult : ParserResult)
    +to_HTML() : String
    +getResults() : ReconciliationResult
}

class StatementOperation LIGHTPINK {
    -date : Date
    -montant : Float
    -nature : String
    -reconciliationLines : ReconciliationLine[]
    -proposals : ProposalLine[]
    -multiProposalCombinations : MultiProposalCombination[]
    --
    +to_HTML() : String
}

class ReconciliationLine LIGHTBLUE {
    -montant : Float
    -gvvEntry : Object
    --
    +to_HTML() : String
}

class ProposalLine LIGHTYELLOW {
    -ecriture : String|Array
    -image : String
    -montant : Float
    -confidence : Integer
    -criteria : Array
    --
    +to_HTML() : String
    +ProposalLine(ecriture_hash : Array)
}

class MultiProposalCombination LIGHTGREEN {
    -combination_data : Array
    -totalAmount : Float
    -confidence : Integer
    -combinationId : String
    --
    +to_HTML() : String
    +addEcriture(ecriture_data : Array) : void
    +removeEcriture(index : Integer) : void
    +MultiProposalCombination(combination_data : Array)
}

' Relations
ReleveParser --> ParserResult : "produit"
Reconciliator --> ParserResult : "utilise"
Reconciliator "1" *-- "*" StatementOperation : "contient"
StatementOperation "1" *-- "*" ReconciliationLine : "peut contenir"
StatementOperation "1" o-- "*" ProposalLine : "peut contenir"
StatementOperation "1" o-- "*" MultiProposalCombination : "peut contenir"

' Notes explicatives
note right of ReleveParser : Parse le relevé de compte\net retourne un ParserResult
note right of Reconciliator : Fait le rapprochement avec\nles écritures GVV en base
note right of StatementOperation : Résultat du rapprochement\nd'une opération du relevé
note right of ReconciliationLine : Rapprochement d'un montant.\nUne ou plusieurs par StatementOperation
note bottom of ProposalLine : Contient les informations sur les propositions\nde rapprochements. Peut être créé à partir\nd'un hash d'écritures [ID => description]
note bottom of MultiProposalCombination : Combinaison d'écritures dont le montant\nadditionné correspond au montant d'une StatementOperation.\nContient directement les données brutes des écritures

@enduml
